--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+/* App.css */
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.contenedor {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+
+  background-color: #fff;
+  padding: 20px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  margin: 20px auto;
+  width: 500px;
+
+}
+
+.imagen {
+  position: relative;
+  height: 325px;
+  width: 500px;
+
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.texto {
+  position: absolute;
+
+  color: black;
+  font-size: 25px;
+  line-height: 10;
+  padding: 10px 20px;
+}
+
+.boton {
+  padding: 20px 30px;
+  background-color: #007bff;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  display: block;
+  width: 150%;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
